# everytime

./: Cargo.toml  README.md
src/: cli.rs  main.rs
src/cmd/: cli.rs  funcs.rs  mod.rs
