[package]
name = "everytime"
version = "0.2.0"
authors = ["Sab Natarajan <sab.natarajan@gmail.com>"]
edition = "2021"
license = "MIT"
description = "et is a command line program to work with dates and times"

[dependencies]
chrono = "0.4.38"
chrono-tz = { version = "0.9.0", features = ["case-insensitive"] }
structopt = "0.3.26"

[[bin]]
name = "et"
path = "src/main.rs"
