[package]
name = "everytime"
version = "0.4.2"
authors = ["Sab Natarajan <sab.natarajan@gmail.com>"]
edition = "2021"
license = "MIT"
description = "et is a command line program to work with dates and times"

[dependencies]
chrono = "0.4.38"
chrono-tz = { version = "0.9.0", features = ["case-insensitive"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

[[bin]]
name = "et"
path = "src/main.rs"
